# rocprofiler-systems

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md
.azuredevops/: rocm-ci.yml
.github/workflows/: containers.yml  cpack.yml  docs.yml  opensuse.yml  python.yml  redhat.yml  release.yml  ubuntu-focal.yml  ubuntu-jammy.yml  ubuntu-noble.yml
cmake/: BuildSettings.cmake  Compilers.cmake  ConfigCPack.cmake  ConfigInstall.cmake  ElfUtils.cmake  Formatting.cmake  MacroUtilities.cmake  PAPI.cmake  Packages.cmake  Perfetto.cmake
cmake/Modules/: FindMPI-Headers.cmake  FindRCCL-Headers.cmake  FindROCmVersion.cmake
cmake/Templates/: args.gn.in  console-script.in  modulefile.in  rocprof-sys-config.cmake.in  rocprof-sys-install.py.in  rocprofsys-install.py.in  setup-env.sh.in
docker/: Dockerfile.opensuse  Dockerfile.opensuse.ci  Dockerfile.rhel  Dockerfile.rhel.ci  Dockerfile.ubuntu  Dockerfile.ubuntu.ci  build-docker-ci.sh  build-docker-release.sh  build-docker.sh  test-docker-release.sh
docs/: conf.py  index.rst  what-is-rocprof-sys.rst
docs/conceptual/: data-collection-modes.rst  rocprof-sys-feature-set.rst
docs/doxygen/: Doxyfile
docs/how-to/: configuring-runtime-options.rst  configuring-validating-environment.rst  general-tips-using-rocprof-sys.rst  instrumenting-rewriting-binary-application.rst  performing-causal-profiling.rst  profiling-python-scripts.rst  sampling-call-stack.rst  understanding-rocprof-sys-output.rst  using-rocprof-sys-api.rst
docs/install/: install.rst  quick-start.rst
docs/reference/: development-guide.rst  rocprof-sys-glossary.rst
docs/sphinx/: _toc.yml.in  requirements.txt
docs/tutorials/: video-tutorials.rst
examples/: CMakeLists.txt  causal-helpers.cmake
examples/causal/: CMakeLists.txt  causal.hpp  impl.cpp
examples/code-coverage/: CMakeLists.txt
examples/fork/: CMakeLists.txt  fork.cpp
examples/lulesh/: CMakeLists.txt
examples/rewrite-caller/: CMakeLists.txt
examples/trace-time-window/: CMakeLists.txt
examples/user-api/: CMakeLists.txt  user-api.cpp
scripts/: build-release.sh  dl-gen.py  rocprof-sys-launch-compiler  rocprof-sys-thread.supp  run-ci.py  run-ci.sh  test-find-package.sh  test-install.sh  test-release.sh  write-rocprof-sys-install.cmake
source/: CMakeLists.txt
source/build-docker/: CMakeCache.txt
source/build-docker/lib/common/: defines.h
source/build-docker/lib/core/: defines.hpp
source/lib/: CMakeLists.txt
source/lib/binary/: CMakeLists.txt  address_multirange.cpp  address_multirange.hpp  analysis.cpp  analysis.hpp  binary_info.hpp  dwarf_entry.cpp  dwarf_entry.hpp  link_map.cpp  link_map.hpp  scope_filter.cpp  scope_filter.hpp  symbol.cpp  symbol.hpp
source/lib/common/: CMakeLists.txt  defines.h.in  delimit.hpp  environment.hpp  invoke.hpp  join.hpp  path.hpp  setup.hpp
source/lib/core/: CMakeLists.txt  argparse.cpp  argparse.hpp  categories.cpp  categories.hpp  common.hpp  concepts.hpp  config.cpp  config.hpp  constraint.cpp  constraint.hpp  debug.cpp  debug.hpp  defines.hpp.in  dynamic_library.cpp  dynamic_library.hpp  exception.cpp  exception.hpp  gpu.cpp  gpu.hpp  hip_runtime.hpp  locking.hpp  mproc.cpp  mproc.hpp  perf.cpp  perf.hpp  perfetto.cpp  perfetto.hpp  perfetto_fwd.hpp  rccl.hpp  redirect.hpp  state.cpp  state.hpp  timemory.cpp  timemory.hpp  utility.cpp  utility.hpp
source/lib/core/binary/: CMakeLists.txt  address_range.cpp  address_range.hpp  fwd.hpp
source/lib/core/components/: CMakeLists.txt  fwd.hpp
source/lib/core/containers/: CMakeLists.txt  aligned_static_vector.hpp  c_array.hpp  operators.hpp  stable_vector.hpp  static_vector.hpp
source/lib/omnitrace/: api.cpp  api.hpp  library.cpp  progress.cpp  regions.cpp  timeout.cpp
source/lib/omnitrace-dl/: CMakeLists.txt  dl.cpp  main.c
source/lib/omnitrace-dl/dl/: dl.hpp
source/lib/omnitrace-rt/cmake/: platform.cmake
source/lib/omnitrace-user/: CMakeLists.txt  user.cpp
source/lib/omnitrace-user/omnitrace/: categories.h  causal.h  types.h  user.h
source/lib/omnitrace-user/rocprof-sys/: causal.h  types.h  user.h
source/lib/rocprof-sys/: CMakeLists.txt  api.cpp  api.hpp  library.cpp  progress.cpp  regions.cpp  timeout.cpp
source/lib/rocprof-sys-dl/: CMakeLists.txt  dl.cpp  main.c
source/lib/rocprof-sys-dl/dl/: dl.hpp
source/lib/rocprof-sys-rt/: CMakeLists.txt
source/lib/rocprof-sys-rt/cmake/: platform.cmake
source/lib/rocprof-sys-user/: CMakeLists.txt  user.cpp
source/lib/rocprof-sys-user/rocprof-sys/: categories.h  causal.h  types.h  user.h
source/lib/rocprof-sys-user/rocprofiler-systems/: causal.h  types.h  user.h
source/python/: CMakeLists.txt  libpyrocprofsys.cpp  libpyrocprofsys.hpp
source/python/cmake/: ConfigPython.cmake  PyBind11Tools.cmake
source/python/gui/: MANIFEST.in  setup.cfg
source/python/gui/source/: __main__.py  parser.py
source/python/rocprofsys/: __init__.py  __main__.py  profiler.py  user.py
tests/: CMakeLists.txt  omnitrace-annotate-tests.cmake  omnitrace-attach-tests.cmake  omnitrace-causal-tests.cmake  omnitrace-config-tests.cmake  omnitrace-fork-tests.cmake  omnitrace-instrument-tests.cmake  omnitrace-kokkos-tests.cmake  omnitrace-mpi-tests.cmake  omnitrace-openmp-tests.cmake  omnitrace-overflow-tests.cmake  omnitrace-pthread-tests.cmake  omnitrace-python-tests.cmake  omnitrace-rccl-tests.cmake  omnitrace-rocm-tests.cmake  omnitrace-testing.cmake  omnitrace-time-window-tests.cmake  rocprof-sys-annotate-tests.cmake  rocprof-sys-attach-tests.cmake  rocprof-sys-causal-tests.cmake  rocprof-sys-code-coverage-tests.cmake  rocprof-sys-config-tests.cmake  rocprof-sys-fork-tests.cmake  rocprof-sys-instrument-tests.cmake  rocprof-sys-kokkos-tests.cmake  rocprof-sys-mpi-tests.cmake  rocprof-sys-openmp-tests.cmake  rocprof-sys-overflow-tests.cmake  rocprof-sys-pthread-tests.cmake  rocprof-sys-python-tests.cmake  rocprof-sys-rccl-tests.cmake  rocprof-sys-rocm-tests.cmake  rocprof-sys-testing.cmake  rocprof-sys-time-window-tests.cmake  rocprof-sys-user-api-tests.cmake  run-rocprof-sys-pid.sh  validate-causal-json.py
tests/source/: CMakeLists.txt
(+7 files in other folders)
